@@ -1,0 +1,26 @@
+<html>
+<head>
+<STYLE TYPE="text/css">
+<!--
+BODY
+   {
+   color:black;
+   background-color:#ECE9D8;
+   font-family:sans-serif;
+   }
+A:link{color:white}
+A:visited{color:white}
+-->
+</STYLE>
+</head>
+<body>
+<H2>New Plugin</H2>
+<strong>Name:</strong> The name of the new plugin.<br>
+<strong>Type:</strong> The list of plugins intalled in JavaHMO.<br>
+<strong>Version:</strong> The version of the selected plugin.<br>
+<strong>Release Date:</strong> The release date of the selected plugin.<br>
+<strong>Author Name:</strong> The name of the author of the selected plugin.<br>
+<strong>Author Email:</strong> The email address of the author of the selected plugin.<br>
+<strong>Author Homepage:</strong> The homepage of the author of the selected plugin.<br>
+</body>
+</html>
