@@ -1,0 +1,31 @@
+<html>
+<head>
+<STYLE TYPE="text/css">
+<!--
+BODY
+   {
+   color:black;
+   background-color:#ECE9D8;
+   font-family:sans-serif;
+   }
+A:link{color:white}
+A:visited{color:white}
+-->
+</STYLE>
+</head>
+<body>
+<H2>Server</H2>
+<strong>Name:</strong> The name of the server sent to TiVo.<br>
+<strong>Version:</strong> The JavaHMO version.<br>
+<strong>Reload:</strong> The default reload period for internet content to be downloaded.<br>
+<strong>TiVo Beacon:</strong> Whether TiVo Beacon service should be used.<br>
+<strong>Streaming Proxy:</strong> Whether all streaming stations should be proxied through the JavaHMO server.<br>
+<strong>Generate Thumbnails:</strong> Whether thumbnail versions of images are generated at system startup.<br>
+<!--<strong>Shuffle Items:</strong> Whether items or folders should be shuffled during shuffled play.<br>-->
+<strong>Port:</strong> The port on the local PC used to communicate with TiVo HMO.<br>
+<strong>IP Address:</strong> For computers with multiple network interface cards, it might be neccessary to specify which network interface is on the private network.<br>
+<strong>Netmask:</strong> The network mask of the chosen network interface IP Address. A netmask must be specified if an IP Address is specified.<br>
+<br>
+<strong>Note:</strong> Any changes to the server properties requires JavaHMO to be restarted.
+</body>
+</html>
